  ``--files-from`` and ``--hardlink`` for ``bzr branch`` and
  ``bzr checkout``. Generally, 2a format repositories extract
  content faster than seeking and reading content from another tree,
  especially in cold-cache situations. (John Arbash Meinel, #607298)

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2rc1
##########

:Codename: ???
:2.2rc1: NOT RELEASED YET

Compatibility Breaks
********************

* BzrError subclasses no longer support the name "message" to be used
  as an argument for __init__ or in _fmt format specification as this
  breaks in some Python versions. errors.LockError.__init__ argument
  is now named "msg" instead of earlier "message".
  (Parth Malwankar, #603461)

* The old ``bzr selftest --benchmark`` option has been removed.
  <https://launchpad.net/bzr-usertest> is an actively-maintained
  macrobenchmark suite.
  (Martin Pool)

New Features
************

Bug Fixes
*********

* ``bzr ignore PATTERNS`` exits with error if a bad pattern is supplied.
  ``InvalidPattern`` exception error message now shows faulting
  regular expression.
  (Parth Malwankar #300062)

* Configuration files in ``${BZR_HOME}`` are now written in an atomic
  way which should help avoid problems with concurrent writers.
  (Vincent Ladeuil, #525571)

* Don't traceback trying to unversion children files of an already
  unversioned directory.  (Vincent Ladeuil, #494221)

Improvements
************

* Add ``bzrlib.merge.MergeIntoMerger``, which can merge part or all of a
  tree, and works with unrelated branches.  (Andrew Bennetts)

Documentation
*************

* ``bzr help patterns`` now explains case insensitive patterns and
  points to Python regular expression documentation.
  (Parth Malwankar, #594386)

API Changes
***********

* Delete ``ProgressTask.note``, which was deprecated in 2.1.

Internals
*********

Testing
*******

* Unit test added to ensure that "message" is not uses as a format variable